mb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mbweb
  labels:
    app: mb
spec:
  selector:
    app: mb
    tier: web
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: "104.198.185.30"
