mb-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mbweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mb-ip
  labels:
    app: mb
spec:
  backend:
    serviceName: helloweb-backend
    servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: mb
spec:
  type: NodePort
  selector:
    app: mb
    tier: web
  ports:
  - port: 80
    targetPort: 80
